Refres the Scribe docs
